# NifIo

./: Cargo.toml  mix.exs
native/io/: Cargo.toml
native/io/src/: lib.rs
