[package]
name = "io"
version = "0.1.0"
authors = ["HansiHE <hansihe@hansihe.com>"]
edition = "2018"

[lib]
name = "io"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/hansihe/rustler", rev = "56fd480485cc2eb484c271e993feb6f6423812ab" }
rustler_codegen = { git = "https://github.com/hansihe/rustler", rev = "56fd480485cc2eb484c271e993feb6f6423812ab" }
bufstream = "0.1.2"
lazy_static = "1.2.0"
